fix env example

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,6 +1,6 @@
 APP_NAME=sample-laravel-modular
 APP_ENV=local
-APP_KEY=base64:297ay6dEH+J71XUrsOGs25aYqBdf80EnyhlWwvbcdY0=
+APP_KEY=key
 APP_DEBUG=true
 APP_URL=http://localhost
 
